--- a/clone-pagina-youtube-com-css/assets/css/styles.css
+++ b/clone-pagina-youtube-com-css/assets/css/styles.css
@@ -151,8 +151,37 @@ main .video-description p {
 aside {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   gap: 16px;
   width: 372px;
   margin: 28px 16px 0 0;
-  background-color: aqua;
+}
+
+.sidebar-item {
+  display: flex;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.sidebar-item img {
+  width: 160px;
+  height: 90px;
+}
+
+.sidebar-item-info {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.sidebar-item-info h3 {
+  font-size: 0.875rem;
+  font-weight: 600;
+  color: #000;
+}
+
+.sidebar-item-info p {
+  font-size: 0.75rem;
+  font-weight: 400;
+  color: #515151;
 }
