--- a/layout-responsivo-site-discord/assets/css/styles.css
+++ b/layout-responsivo-site-discord/assets/css/styles.css
@@ -2,29 +2,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
 header {
-  background: url(../images/header-background.png) no-repeat -711px 0px / cover;
+  background: url(../images/header-background.png) no-repeat -640px 0px / cover;
   height: 505px;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  justify-content: center;
+  padding: 0 24px;
 }
 
 h1,
-.section-4 h2 {
+h2 {
   font-family: "Luckiest Guy", cursive;
   font-size: 2rem;
   font-weight: 400;
   line-height: 1;
-}
-
-main section h3 {
-  color: #23272a;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.5rem;
-  font-weight: 800;
-}
-
-main section img {
-  width: 379px;
-  height: 100%;
 }
 
 p,
@@ -32,14 +24,6 @@ button {
   font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   font-weight: 400;
-}
-
-header {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-  justify-content: center;
-  padding: 0 26px;
 }
 
 header h1 {
@@ -53,6 +37,7 @@ header p {
 header .buttons {
   display: flex;
   flex-direction: column;
+  width: 100%;
   gap: 16px;
 }
 
@@ -74,15 +59,33 @@ header .buttons #btn-black {
 
 main section {
   display: flex;
-  width: 428px;
+  width: 100%;
   padding: 40px 24px;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
   gap: 27px;
 }
 
-main section p {
+main section img {
+  width: 379px;
+  height: 100%;
+}
+
+.section-texts {
+  display: flex;
+  align-items: flex-start;
+  padding: 0;
+}
+
+.section-texts h3 {
+  color: #23272a;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+
+.section-texts p {
   color: #23272a;
 }
 
@@ -97,4 +100,78 @@ footer {
   align-items: center;
   height: 140px;
   background-color: #23272a;
+}
+
+@media (min-width: 768px) {
+  header {
+    background: url(../images/header-background.png) no-repeat 0px 0px / cover;
+    height: 505px;
+    padding: 0 100px;
+  }
+
+  h1,
+  .section-4 h2 {
+    font-size: 3.5rem;
+    text-align: center;
+  }
+
+  header p {
+    text-align: center;
+  }
+
+  main section h3 {
+    font-size: 2.5rem;
+  }
+
+  main section img {
+    width: 607px;
+    height: 100%;
+  }
+
+  header {
+    align-items: center;
+  }
+
+  header .buttons {
+    flex-direction: row;
+    justify-content: center;
+  }
+
+  header .buttons button {
+    height: 44px;
+  }
+
+  header .buttons #btn-white {
+    width: 205px;
+  }
+
+  header .buttons #btn-black {
+    width: 281px;
+  }
+
+  main section {
+    padding: 40px 100px;
+  }
+}
+
+@media (min-width: 1200px) {
+  header {
+    background: url(../images/header-background.png) no-repeat 0px 0px / cover;
+    height: 459px;
+    padding: 0 261px;
+  }
+
+  main section {
+    gap: 16px;
+    padding: 40px 200px;
+  }
+
+  .section-1,
+  .section-3 {
+    flex-direction: row;
+  }
+
+  .section-2 {
+    flex-direction: row-reverse;
+  }
 }
