--- a/classificador-nivel-heroi/assets/css/modal.css
+++ b/classificador-nivel-heroi/assets/css/modal.css
@@ -1,20 +1,16 @@
-main dialog::backdrop {
-  /* background-color: rgba(0, 0, 0, 0.5); */
-  background-color: aqua;
-}
-
 main dialog {
   width: 300px;
   margin: auto;
   padding: 32px;
-  gap: 0.5rem;
   border-radius: 16px;
   border: 2px solid #1c1c1e;
   background: #ffc107;
+  position: relative;
 }
 
 main dialog button {
-  align-self: flex-end;
+  position: absolute;
+  margin: -16px 0 0 220px;
   cursor: pointer;
   border: none;
   background: transparent;
@@ -28,9 +24,14 @@ main dialog h3 {
 main dialog h2 {
   font-size: 1.5rem;
   text-align: center;
+  margin: 8px 0;
 }
 
 main dialog p {
   font-size: 16px;
   text-align: center;
+}
+
+main dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.5);
 }
