--- a/classificador-nivel-heroi/assets/css/index.css
+++ b/classificador-nivel-heroi/assets/css/index.css
@@ -1,4 +1,15 @@
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
 main section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   padding: 32px;
   gap: 2rem;
 }
@@ -50,4 +61,11 @@ main section form button:active {
 }
 
 @media screen and (min-width: 768px) {
+  main section {
+    width: 380px;
+    background-color: #b580ff;
+    border: 2px solid #1c1c1e;
+    border-radius: 16px;
+    padding: 32px;
+  }
 }
