--- a/yugioh-jokenpo/src/styles/main.css
+++ b/yugioh-jokenpo/src/styles/main.css
@@ -26,3 +26,47 @@
     rgba(0, 0, 0, 0.5) 100%
   );
 }
+
+.container {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  height: 100vh;
+}
+
+.container__letf {
+  width: 35%;
+  min-width: 300px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.frame {
+  border: 3px solid #000;
+  border-radius: 5px;
+}
+
+.score_box {
+  background: #fff;
+  padding: 2rem;
+}
+
+.card_details {
+  background: #fff;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 6rem;
+  width: 100%;
+}
+
+#card-name {
+  font-size: 0.8rem;
+}
+
+#card-type {
+  font-size: 1rem;
+}
