--- a/yugioh-jokenpo/src/styles/main.css
+++ b/yugioh-jokenpo/src/styles/main.css
@@ -42,6 +42,10 @@
   justify-content: space-around;
 }
 
+.container__right {
+  width: 65%;
+}
+
 .frame {
   border: 3px solid #000;
   border-radius: 5px;
@@ -69,4 +73,51 @@
 
 #card-type {
   font-size: 1rem;
+}
+
+.card-box__container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 0.3rem;
+}
+
+.card-versus__container {
+  display: flex;
+  flex-direction: column;
+  padding-top: 0.1rem;
+  height: 300px;
+}
+
+.versus-top,
+.versus-bottom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.versus-bottom {
+  margin-top: 1rem;
+}
+
+#next-duel {
+  display: none;
+}
+
+.card-box {
+  height: 9rem;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.card-infield {
+  height: 11.2rem;
+  width: 8rem;
+  border: 1px solid #fff;
+  border-radius: 0.5rem;
 }
