--- a/yugioh-jokenpo/src/styles/main.css
+++ b/yugioh-jokenpo/src/styles/main.css
@@ -116,9 +116,10 @@
   justify-content: space-around;
 }
 
-.card-infield {
+.card-infield img {
   height: 11.2rem;
-  width: 8rem;
+  width: 8.4rem;
+  object-fit: cover;
   border: 1px solid #fff;
   border-radius: 0.5rem;
 }
