--- a/yugioh-jokenpo/src/styles/main.css
+++ b/yugioh-jokenpo/src/styles/main.css
@@ -87,8 +87,8 @@
 .card-versus__container {
   display: flex;
   flex-direction: column;
-  padding-top: 0.1rem;
-  height: 300px;
+  justify-content: center;
+  height: 400px;
 }
 
 .versus-top,
