--- a/yugioh-jokenpo/src/styles/main.css
+++ b/yugioh-jokenpo/src/styles/main.css
@@ -87,8 +87,8 @@
 .card-versus__container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  height: 400px;
+  justify-content: flex-start;
+  height: 300px;
 }
 
 .versus-top,
@@ -116,12 +116,16 @@
   justify-content: space-around;
 }
 
-.card-infield img {
+.card-infield {
   height: 11.2rem;
   width: 8.4rem;
-  object-fit: cover;
   border: 1px solid #fff;
   border-radius: 0.5rem;
+}
+
+.card-infield img {
+  height: 100%;
+  width: 100%;
 }
 
 .card {
