--- a/yugioh-jokenpo/src/styles/main.css
+++ b/yugioh-jokenpo/src/styles/main.css
@@ -5,7 +5,7 @@
   height: 100vh;
   overflow: hidden;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .bg-video .video {
